// =============================================================================
// Credit Risk Scoring Engine — Physical Schema (DBML)
// Aligned with Flyway migrations V1–V18 (source of truth)
// Last sync: 2026-04-05 (includes V19)
// =============================================================================

// ─────────────────────────────────────────────────────────────────────────────
// ENUMS
// ─────────────────────────────────────────────────────────────────────────────

Enum role {
  ADMIN
  ANALYST
  RISK_MANAGER
  CREDIT_SUPERVISOR
}

Enum auth_action {
  LOGIN_SUCCESS
  LOGIN_FAILURE
  LOGOUT
  TOKEN_REFRESH
  PASSWORD_CHANGE
  ACCOUNT_LOCKED
}

Enum audit_action {
  CREATE
  UPDATE
  DELETE
  READ
  LOGIN
  LOGOUT
  EVALUATE
  DECIDE
}

Enum scoring_model_status {
  DRAFT
  ACTIVE
  DEPRECATED
}

Enum variable_type {
  NUMERIC
  CATEGORICAL
}

Enum knockout_operator {
  EQUALS
  NOT_EQUALS
  GREATER_THAN
  LESS_THAN
  GREATER_EQUAL
  LESS_EQUAL
  IN
  NOT_IN
}

Enum risk_level {
  VERY_LOW
  LOW
  MEDIUM
  HIGH
  VERY_HIGH
}

Enum credit_decision_type {
  APPROVED
  REJECTED
  MANUAL_REVIEW
}

// ─────────────────────────────────────────────────────────────────────────────
// SECURITY MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// role_permission
// =========================
Table role_permission {
  id uuid [primary key, default: `gen_random_uuid()`]
  role varchar(30) [not null, note: 'ENUM: ADMIN, ANALYST, RISK_MANAGER, CREDIT_SUPERVISOR']
  resource varchar(50) [not null]
  action varchar(30) [not null]
  created_at timestamptz [not null]

  indexes {
    (role, resource, action) [unique, name: 'uq_role_permission_role_resource_action']
  }
}

// =========================
// app_user
// =========================
Table app_user {
  id uuid [primary key, default: `gen_random_uuid()`]
  username varchar(50) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(30) [not null, note: 'ENUM: ADMIN, ANALYST, RISK_MANAGER, CREDIT_SUPERVISOR. CHECK constraint in DB.']
  enabled boolean [not null, default: true]
  account_locked boolean [not null, default: false]
  failed_login_attempts integer [not null, default: 0]
  lock_time timestamptz
  password_changed_at timestamptz [not null]
  last_login_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    role [name: 'idx_app_user_role']
    (enabled) [name: 'idx_app_user_enabled', note: 'partial WHERE enabled = true']
  }
}

// =========================
// authentication_log
// =========================
Table authentication_log {
  id uuid [primary key, default: `gen_random_uuid()`]
  user_id uuid
  username varchar(50) [not null]
  action varchar(30) [not null, note: 'ENUM: LOGIN_SUCCESS, LOGIN_FAILURE, LOGOUT, TOKEN_REFRESH, PASSWORD_CHANGE, ACCOUNT_LOCKED']
  ip_address varchar(45) [not null]
  user_agent varchar(500)
  details varchar(500)
  created_at timestamptz [not null]

  indexes {
    (user_id, action, created_at) [name: 'idx_auth_log_user_action']
    created_at [name: 'idx_auth_log_created_at']
  }
}

// =========================
// token_blacklist
// =========================
Table token_blacklist {
  id uuid [primary key, default: `gen_random_uuid()`]
  jti varchar(255) [not null, unique]
  user_id uuid [not null]
  expires_at timestamptz [not null]
  blacklisted_at timestamptz [not null]
  reason varchar(100)
  created_by varchar(100)
  updated_by varchar(100)

  indexes {
    jti [name: 'idx_token_blacklist_jti']
    expires_at [name: 'idx_token_blacklist_expires_at']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// APPLICANT MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// applicant
// =========================
Table applicant {
  id uuid [primary key, default: `gen_random_uuid()`]
  name varchar(150) [not null]
  identification_encrypted varchar(700) [not null]
  identification_hash varchar(128) [not null]
  birth_date date [not null]
  employment_type varchar(30) [not null]
  monthly_income numeric(19,2) [not null]
  work_experience_months integer [not null]
  phone varchar(20)
  address varchar(500)
  email varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    identification_hash [unique, name: 'uk_applicant_identification_hash']
  }
}

// =========================
// applicant_edit_audit
// =========================
Table applicant_edit_audit {
  id uuid [primary key, default: `gen_random_uuid()`]
  applicant_id uuid [not null]
  field_name varchar(100) [not null]
  old_value varchar(500)
  new_value varchar(500)
  changed_at timestamptz [not null]
  changed_by varchar(100) [not null]

  indexes {
    (applicant_id, changed_at) [name: 'idx_applicant_edit_audit_applicant', note: 'DESC on changed_at']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// FINANCIAL DATA MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// financial_data
// =========================
Table financial_data {
  id uuid [primary key, default: `gen_random_uuid()`]
  applicant_id uuid [not null]
  version integer [not null, default: 1, note: 'Versioned per applicant']
  annual_income numeric(19,2) [not null, note: 'CHECK >= 0']
  monthly_expenses numeric(19,2) [not null, note: 'CHECK >= 0']
  current_debts numeric(19,2) [not null, note: 'CHECK >= 0']
  assets_value numeric(19,2) [not null, note: 'CHECK >= 0']
  declared_patrimony numeric(19,2) [not null, note: 'CHECK >= 0']
  has_outstanding_defaults boolean [not null, default: false]
  credit_history_months integer [not null, note: 'CHECK >= 0']
  defaults_last_12m integer [not null, default: 0, note: 'CHECK >= 0']
  defaults_last_24m integer [not null, default: 0, note: 'CHECK >= 0']
  external_bureau_score integer [note: 'NULL allowed. CHECK >= 0 AND <= 999']
  active_credit_products integer [not null, default: 0, note: 'CHECK >= 0']
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    (applicant_id, version) [unique, name: 'uk_financial_data_applicant_version']
    applicant_id [name: 'idx_financial_data_applicant']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// SCORING MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// scoring_model
// =========================
Table scoring_model {
  id uuid [primary key, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  description varchar(500)
  status varchar(20) [not null, note: 'ENUM: DRAFT, ACTIVE, DEPRECATED. CHECK constraint in DB.']
  min_score numeric(5,2) [not null, default: 0, note: 'CHECK >= 0']
  max_score numeric(5,2) [not null, default: 100, note: 'CHECK <= 1000']
  version integer [not null, default: 1]
  activated_at timestamptz
  deprecated_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    (status) [unique, name: 'uk_scoring_model_active', note: 'partial WHERE status = ACTIVE']
    status [name: 'idx_scoring_model_status']
  }
}

// =========================
// scoring_variable
// =========================
Table scoring_variable {
  id uuid [primary key, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  description varchar(500)
  variable_type varchar(20) [not null, note: 'ENUM: NUMERIC, CATEGORICAL']
  source_field varchar(100) [not null]
  enabled boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)
}

// =========================
// model_variable
// =========================
Table model_variable {
  id uuid [primary key, default: `gen_random_uuid()`]
  model_id uuid [not null]
  variable_id uuid [not null]
  weight numeric(5,4) [not null, note: 'CHECK > 0 AND <= 1']
  ranges_snapshot jsonb
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    (model_id, variable_id) [unique, name: 'uk_model_variable_model_variable']
    model_id [name: 'idx_model_variable_model']
    variable_id [name: 'idx_model_variable_variable']
  }
}

// =========================
// variable_range
// =========================
Table variable_range {
  id uuid [primary key, default: `gen_random_uuid()`]
  variable_id uuid [not null]
  min_value numeric(19,2) [not null]
  max_value numeric(19,2) [not null, note: 'CHECK min_value < max_value']
  score integer [not null, note: 'CHECK >= 0 AND <= 100']
  label varchar(50)
  created_at timestamptz [not null]

  indexes {
    variable_id [name: 'idx_variable_range_variable']
  }
}

// =========================
// variable_category
// =========================
Table variable_category {
  id uuid [primary key, default: `gen_random_uuid()`]
  variable_id uuid [not null]
  category_value varchar(100) [not null]
  score integer [not null, note: 'CHECK >= 0 AND <= 100']
  label varchar(50)
  created_at timestamptz [not null]

  indexes {
    (variable_id, category_value) [unique, name: 'uk_variable_category_variable_value']
    variable_id [name: 'idx_variable_category_variable']
  }
}

// =========================
// knockout_rule
// =========================
Table knockout_rule {
  id uuid [primary key, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  description varchar(500)
  field varchar(100) [not null]
  operator varchar(20) [not null, note: 'ENUM: EQUALS, NOT_EQUALS, GREATER_THAN, LESS_THAN, GREATER_EQUAL, LESS_EQUAL, IN, NOT_IN']
  threshold_value varchar(255) [not null]
  priority integer [not null, default: 0]
  enabled boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by varchar(100) [not null]
  updated_by varchar(100)

  indexes {
    (enabled, priority) [name: 'idx_knockout_rule_enabled', note: 'partial WHERE enabled = true']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// EVALUATION MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// evaluation (immutable — no updated_at/updated_by)
// =========================
Table evaluation {
  id uuid [primary key, default: `gen_random_uuid()`]
  applicant_id uuid [not null]
  model_id uuid [not null]
  financial_data_id uuid [not null]
  total_score numeric(5,2) [not null, note: 'CHECK >= 0 AND <= 100']
  risk_level varchar(20) [not null, note: 'ENUM: VERY_LOW, LOW, MEDIUM, HIGH, VERY_HIGH']
  knocked_out boolean [not null, default: false]
  knockout_reasons varchar(1000)
  evaluated_at timestamptz [not null]
  evaluated_by varchar(100) [not null]
  created_at timestamptz [not null]
  created_by varchar(100) [not null]

  indexes {
    (applicant_id, evaluated_at) [name: 'idx_evaluation_applicant_date', note: 'DESC on evaluated_at']
    risk_level [name: 'idx_evaluation_risk_level']
    model_id [name: 'idx_evaluation_model']
    evaluated_at [name: 'idx_evaluation_evaluated_at']
  }
}

// =========================
// evaluation_detail (immutable)
// =========================
Table evaluation_detail {
  id uuid [primary key, default: `gen_random_uuid()`]
  evaluation_id uuid [not null]
  variable_id uuid [not null]
  variable_name varchar(100) [not null]
  raw_value varchar(255) [not null]
  score numeric(5,2) [not null, note: 'CHECK >= 0 AND <= 100']
  weight numeric(5,4) [not null]
  weighted_score numeric(5,2) [not null]
  created_at timestamptz [not null]

  indexes {
    evaluation_id [name: 'idx_evaluation_detail_evaluation']
  }
}

// =========================
// evaluation_knockout (immutable — NO updated_by)
// =========================
Table evaluation_knockout {
  id uuid [primary key, default: `gen_random_uuid()`]
  evaluation_id uuid [not null]
  rule_id uuid [not null]
  rule_name varchar(100) [not null]
  field_value varchar(255) [not null]
  triggered boolean [not null]
  created_at timestamptz [not null]

  indexes {
    evaluation_id [name: 'idx_evaluation_knockout_evaluation']
    (evaluation_id) [name: 'idx_evaluation_knockout_triggered', note: 'partial WHERE triggered = true']
  }
}

// =========================
// credit_decision (immutable)
// =========================
Table credit_decision {
  id uuid [primary key, default: `gen_random_uuid()`]
  evaluation_id uuid [not null, unique]
  decision varchar(20) [not null, note: 'ENUM: APPROVED, REJECTED, MANUAL_REVIEW']
  observations varchar(2000) [not null, note: 'CHECK LENGTH(observations) >= 20']
  approved_amount numeric(19,2) [note: 'CHECK >= 0']
  interest_rate numeric(5,2) [note: 'CHECK >= 0 AND <= 100']
  term_months integer [note: 'CHECK > 0']
  decided_at timestamptz [not null]
  decided_by varchar(100) [not null]
  created_at timestamptz [not null]
  created_by varchar(100) [not null]

  indexes {
    evaluation_id [name: 'idx_credit_decision_evaluation']
    decision [name: 'idx_credit_decision_decision']
    decided_at [name: 'idx_credit_decision_decided_at']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// AUDIT MODULE
// ─────────────────────────────────────────────────────────────────────────────

// =========================
// audit_log
// =========================
Table audit_log {
  id uuid [primary key, default: `gen_random_uuid()`]
  entity_type varchar(50) [not null]
  entity_id uuid [not null]
  action varchar(30) [not null, note: 'ENUM: CREATE, UPDATE, DELETE, READ, LOGIN, LOGOUT, EVALUATE, DECIDE']
  actor varchar(100) [not null]
  actor_ip varchar(45)
  data_before jsonb
  result varchar(20)
  data_after jsonb
  details varchar(1000)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (entity_type, entity_id) [name: 'idx_audit_log_entity']
    actor [name: 'idx_audit_log_actor']
    created_at [name: 'idx_audit_log_created_at']
  }
}

// ─────────────────────────────────────────────────────────────────────────────
// RELATIONSHIPS
// ─────────────────────────────────────────────────────────────────────────────

// Security
Ref: authentication_log.user_id > app_user.id
Ref: token_blacklist.user_id > app_user.id

// Applicant
Ref: applicant_edit_audit.applicant_id > applicant.id
Ref: financial_data.applicant_id > applicant.id

// Scoring
Ref: model_variable.model_id > scoring_model.id
Ref: model_variable.variable_id > scoring_variable.id
Ref: variable_range.variable_id > scoring_variable.id
Ref: variable_category.variable_id > scoring_variable.id

// Evaluation
Ref: evaluation.applicant_id > applicant.id
Ref: evaluation.model_id > scoring_model.id
Ref: evaluation.financial_data_id > financial_data.id
Ref: evaluation_detail.evaluation_id > evaluation.id
Ref: evaluation_detail.variable_id > scoring_variable.id
Ref: evaluation_knockout.evaluation_id > evaluation.id
Ref: evaluation_knockout.rule_id > knockout_rule.id
Ref: credit_decision.evaluation_id - evaluation.id

// ─────────────────────────────────────────────────────────────────────────────
// NOTES: Logical relationship (not FK)
// ─────────────────────────────────────────────────────────────────────────────
// app_user.role (VARCHAR) ↔ role_permission.role (VARCHAR)
// The join is by role NAME, not by UUID FK.
// This is intentional: roles are a small fixed enum, not a dynamic entity.

// ─────────────────────────────────────────────────────────────────────────────
// NOTES: HU fields — all implemented as of V19
// ─────────────────────────────────────────────────────────────────────────────
// HU-001: applicant.address (dirección), applicant.email (correo electrónico) — V19
// HU-004: financial_data.defaults_last_12m, defaults_last_24m,
//         external_bureau_score, active_credit_products — V19
